--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React Template</title>
+    <title>Music Storm</title>
     <script src="https://kit.fontawesome.com/f814e80df3.js" crossorigin="anonymous"></script>
   </head>
   <body>
